@@ -73,7 +73,8 @@ CDataFrameOutliersRunner::CDataFrameOutliersRunner(const CDataFrameAnalysisSpeci
 
 CDataFrameOutliersRunner::CDataFrameOutliersRunner(const CDataFrameAnalysisSpecification& spec)
     : CDataFrameAnalysisRunner{spec}, m_Method{static_cast<std::size_t>(
-                                          maths::COutliers::E_Ensemble)} {
+                                          maths::COutliers::E_Ensemble)},
+      m_Instrumentation{spec.jobId()} {
 }
 
 std::size_t CDataFrameOutliersRunner::numberExtraColumns() const {
